[package]
name = "klark-server"
version = "0.1.0"
license = "GPL-3.0-only"
description = "A modern and feature-rich media server and collection manager. Part of The Klark Project."
authors = ["Krystian Wiecheć <krystian.wiechec.p@skiff.com>"]
homepage = "https://github.com/krystejj/klark-server"
repository = "https://github.com/krystejj/klark-server"
publish = false
edition = "2021"

[dependencies]
actix-web = "4.4.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
sled = "0.34.7"

log = "0.4.20"
flexi_logger = { version = "0.27.4", features = ["async"] }
ansiterm = "0.12.2"

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
bincode = "1.3.3"
toml = "0.8.8"
